--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,12 +22,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
+    url("/Images/bg_pattern.jpg") center;
+  background-size: cover;
   font-family: "Teko", sans-serif;
 }
 .red-border {
